--- a/pom.xml
+++ b/pom.xml
@@ -59,11 +59,10 @@
             <version>1.14.3</version>
         </dependency>
         <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>5.4.2Final</version>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.34</version>
         </dependency>
-
     </dependencies>
 
 </project>
