--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.jpa.hibernate.ddl-auto=create_drop
 #spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.main.allow-circular-references=true
+
